--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,20 @@
-pyrogram==0.15.1
-aiohttp
+
+
 requests
 youtube-dl
 git+git://github.com/google/chatbase-python.git
-
+tgcrypto
 Pillow
 hachoir
+PyDrive
+pyrogram==0.12.0
+ffmpeg-python
 numpy
-beautifulsoup4
+
+
+
+
+
+
+
 
